<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Familiar Foods</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_adventure_mode">Adventure Mode</string>
    <string name="title_activity_filter">Filters</string>
    <string name="find_similar_food">Find Familiar Foods</string>
    <string name="search_food_hint">Search for a Familiar Food</string>
    <string name="link_food">Link Similar Foods</string>
    <string name="is_similar_to">is similar to</string>
    <string name="add_food">Add New Food</string>
    <string name="adventure_mode">Adventure Mode</string>
    <string name="friends_foods">Friend\'s Foods</string>
    <string name="filter_button">Choose Cuisines for Results</string>
    <string name="help_button">\?</string>
    <string name="help_text">Help</string>
    <string name="help_cuisine_filter_dialog">By \"Choosing Cuisines\", you can select one or more cuisines that you wish to see in the results.</string>
    <string name="help_link_foods_dialog">\"Linking Foods\" together tells the app that they are similar. If you know two foods from different cuisines have a similar taste, select them and link them together here to contribute and grow the app\'s knowledge!</string>
    <string name="suggestion_prompt">Why don\'t you try&#8230;</string>
    <string name="previous_food">&lt;</string>
    <string name="next_food">&gt;</string>
    <string name="cuisine">Cuisine</string>
    <string name="cuisine_type">Cuisine Type Goes Here</string>
    <string name="food">Food</string>
    <string name="food_name_label">Food Name</string>
    <string name="add_picture_label">Add Picture</string>
    <string name="descriptor_label">Flavors, Ingredients, Description</string>
    <string name="food_name">Name of Food Goes Here</string>
    <string name="select_none">Select None</string>
    <string name="select_all">Select All</string>
    <string name="done">Done</string>
    <string name="food_type">Food Type</string>
    <string name="submit">Submit</string>
    <string name="no_food_available">No foods available for your criteria. Please add foods if you have suggestions!</string>
    <string name="food1_label">Food 1:</string>
    <string name="food2_label">Food 2:</string>
    <string name="link_food_suggestion">Food Item Name</string>

</resources>
